scss/components/_filters.scss
@import '../utilities/variables';

// mobile filters
.area-sidebar-shop {
  .widget-title {
    font-family: $font-family-montserrat;
    color: $color-text;
  }
}

// above desktop filters (breadcrumbs, sorting...)
.shop-loop-head,
.woodmart-buttons {
  display: none;
}

// desktop filters
.filters-area {
  &.custom-content {
    display: none;

    .woodmart-active-filters {
      margin-top: -10px;
    }

    @media (min-width: $screen-size-desktop) {
      display: block;
      border-top: 0;
      padding-top: 12px;
      padding-bottom: 12px;
      margin-bottom: 12px;

      .woodmart-pf-title {
        border: 1px solid rgba(0, 0, 0, 0.1);
        padding-left: 20px;
        letter-spacing: 0.3px;
        border-radius: 2px;
        background-color: $color-white;

        .title-text {
          font-weight: 500;
          font-size: 12px;
          letter-spacing: 0.5px;
          color: $color-text;
        }
      }

      .woodmart-pf-dropdown {
        background-color: $color-white;
        border-radius: 0 0 5px 5px;
        box-shadow: 0 2px 3px rgba(0, 0, 0, .15);

        .pf-value {
          height: 46px;
        }
      }

      .woodmart-pf-btn {
        flex-grow: 1;

        button {
          background-color: $color-brand-primary;
          width: 100%;
        }
      }
    }
  }
}

